--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,7 @@
         "env.bak{,/**}",
         "venv.bak{,/**}",
         ".vscode{,/**}"
-    ]
+    ],
+    "appService.defaultWebAppToDeploy": "/subscriptions/39e38df0-322e-4df6-a28d-1be636faa2a4/AppServices/subscriptions/39e38df0-322e-4df6-a28d-1be636faa2a4/resourceGroups/teamprojekt/providers/Microsoft.Web/sites/active-learning-for-tweet-sentiment-classification",
+    "appService.deploySubpath": "."
 }
